--- a/src/public/home/info.html
+++ b/src/public/home/info.html
@@ -8,6 +8,7 @@
       Favorite dish: {{info.person.user.shortname}}<br>
       <img class="img-responsive" width="250" height="150" ng-src="{{info.path}}/images/{{info.person.user.shortname}}.jpg"
       alt="{{info.info.name}}">
+      <p> {{info.info.name}}</p>
       <p class="menu-item-details">{{info.info.description}}</p>
         <!-- {{info.info.short_name}}
         {{info.person.user.firstname}} -->
